--- a/dashboard.html
+++ b/dashboard.html
@@ -177,16 +177,16 @@
 										<div class="resume-strength mx-auto">
 											<div class="outer">
 												<div class="inner flex-column">
-													<h2 class="number text-success mb-0">80</h2>
-													<span class="d-block text-uppercase text-success fs-12">strong</span>
+													<h2 class="number text-primary mb-0">80</h2>
+													<span class="d-block text-uppercase text-primary fs-12">strong</span>
 												</div>
 											</div>
 											<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px"
 												height="120px">
 												<defs>
 													<linearGradient id="GradientColor">
-														<stop offset="0%" stop-color="#31df59" />
-														<stop offset="100%" stop-color="#047c20" />
+														<stop offset="0%" stop-color="#0389e7" />
+														<stop offset="100%" stop-color="#2bc7e0" />
 													</linearGradient>
 												</defs>
 												<circle cx="60" cy="60" r="55" stroke-linecap="round"
@@ -194,7 +194,7 @@
 													style="stroke-dashoffset:calc(345 - 345 * 0.80);" />
 											</svg>
 										</div>
-										<span class="bg-success text-white d-inline-block text-uppercase py-1 px-4 fs-12 rounded-pill mt-4">Resume Strength</span>
+										<span class="bg-primary text-white d-inline-block text-uppercase py-1 px-4 fs-12 rounded-pill mt-4">Resume Strength</span>
 									</div>
 									<div class="col-md-6">
 										<ul class="strength-parameters-list">
