--- a/my-resumes.html
+++ b/my-resumes.html
@@ -317,22 +317,22 @@
 							<div class="resume-strength mx-auto">
 								<div class="outer">
 									<div class="inner flex-column">
-										<h5 class="number text-success">80</h5>
-										<h6 class="text-primary text-success mb-0">Strong</h6>
+										<h5 class="number text-primary">80</h5>
+										<h6 class="text-primary text-primary mb-0">Strong</h6>
 									</div>
 								</div>
 								<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="120px" height="120px">
 									<defs>
 										<linearGradient id="GradientColor">
-											<stop offset="0%" stop-color="#31df59"></stop>
-											<stop offset="100%" stop-color="#047c20"></stop>
+											<stop offset="0%" stop-color="#0389e7"></stop>
+											<stop offset="100%" stop-color="#2bc7e0"></stop>
 										</linearGradient>
 									</defs>
 									<circle cx="60" cy="60" r="55" stroke-linecap="round" stroke-dasharray="345"
 										style="stroke-dashoffset:calc(345 - 345 * 0.80);"></circle>
 								</svg>
 							</div>
-							<span class="py-2 px-2 bg-success text-white d-inline-block mt-4  rounded-pill fs-12">Resume
+							<span class="py-2 px-2 bg-primary text-white d-inline-block mt-4  rounded-pill fs-12">Resume
 								Strength </span>
 							<p class="mt-3">Review our suggestions to see what you can fix</p>
 							<div class="bg-light round p-4">
