--- a/spellcheck.html
+++ b/spellcheck.html
@@ -241,10 +241,17 @@
                                                             aria-haspopup="true" aria-expanded="false">
                                                             optimizatio
                                                         </span>
-                                                        <div class="dropdown-menu" aria-labelledby="error1">
-                                                            <a class="dropdown-item" href="#">optimization</a>
-                                                            <a class="dropdown-item" href="#">optimisation</a>
-                                                            <a class="dropdown-item" href="#">optimize</a>
+                                                        <div class="dropdown-menu fs-12" aria-labelledby="error1">
+                                                            <span class="dropdown-item">optimization</span>
+                                                            <span class="dropdown-item">optimisation</span>
+                                                            <div class="dropdown-divider"></div>
+                                                            <span class="dropdown-item"><span
+                                                                    class="fa fa-times text-danger"></span>
+                                                                Ignore</span>
+                                                            <span class="dropdown-item"><span
+                                                                    class="fa fa-times text-danger"></span> Ignore
+                                                                All</span>
+                                                            <span class="dropdown-item">Add to Dictionary</span>
                                                         </div>
 
                                                         , marketing, social media management and audio/video
@@ -291,19 +298,27 @@
                                                             <li>Time Management and Prioritization</li>
                                                             <li>Scripting Languages: PHP, Python, Javascript</li>
                                                             <li>
-                                                                <div class="dropdown">
+                                                                <div class="dropdown ">
                                                                     <span class="error-underline" id="error2"
                                                                         data-toggle="dropdown" aria-haspopup="true"
                                                                         aria-expanded="false">
                                                                         Responsiveee
                                                                         </button>
-                                                                        <div class="dropdown-menu"
+                                                                        <div class="dropdown-menu fs-12"
                                                                             aria-labelledby="error2">
-                                                                            <a class="dropdown-item"
-                                                                                href="#">Responsive</a>
-                                                                            <a class="dropdown-item"
-                                                                                href="#">Responsiveness</a>
-                                                                            <a class="dropdown-item" href="#">review</a>
+                                                                            <span
+                                                                                class="dropdown-item">Responsive</span>
+                                                                            <span
+                                                                                class="dropdown-item">Responsiveness</span>
+                                                                            <div class="dropdown-divider"></div>
+                                                                            <span class="dropdown-item"><span
+                                                                                    class="fa fa-times text-danger"></span>
+                                                                                Ignore</span>
+                                                                            <span class="dropdown-item"><span
+                                                                                    class="fa fa-times text-danger"></span>
+                                                                                Ignore All</span>
+                                                                            <span class="dropdown-item">Add to
+                                                                                Dictionary</span>
                                                                         </div>
                                                                 </div> Web Design
                                                             </li>
