--- a/recommended-jobs.html
+++ b/recommended-jobs.html
@@ -76,8 +76,8 @@
 				</div>
 				<div class="navbar-right">
 					<ul class="d-flex align-items-center fs-20 mb-0 list-unstyled">
-						<li class="mr-3"><a href="#"><span class="fa fa-comments"></span></a></li>
-						<li class="mr-3"><a href="#"><span class="fa fa-bell"></span></a></li>
+						<li class="mr-3"><a href="#" class=" text-primary"><span class="fa fa-comments"></span></a></li>
+						<li class="mr-3"><a class=" text-primary" href="#"><span class="fa fa-bell"></span></a></li>
 					</ul>
 					<div class="header-user order-lg-3 order-3">
 						<div class="dropdown tr-change-dropdown ">
