--- a/my-resumes.html
+++ b/my-resumes.html
@@ -161,7 +161,7 @@
 								<p class="d-flex mb-0 px-2 cursor-pointer">
 								<div class="dropdown">
 									<span class="border-0 bg-transparent d-flex flex-column align-items-center"
-										type="button" id="dropdownMenuButton" data-toggle="dropdown"
+										 id="dropdownMenuButton" data-toggle="dropdown"
 										aria-haspopup="true" aria-expanded="false">
 										<span class="text-primary mb-2  fs-20 fa fa-ellipsis-h"></span><span>More</span>
 									</span>
@@ -220,7 +220,7 @@
 								<p class="d-flex mb-0 px-2 cursor-pointer">
 								<div class="dropdown">
 									<span class="border-0 bg-transparent d-flex flex-column align-items-center"
-										type="button" id="dropdownMenuButton" data-toggle="dropdown"
+										 id="dropdownMenuButton" data-toggle="dropdown"
 										aria-haspopup="true" aria-expanded="false">
 										<span class="text-primary mb-2  fs-20 fa fa-ellipsis-h"></span><span>More</span>
 									</span>
