--- a/dashboard.html
+++ b/dashboard.html
@@ -136,7 +136,242 @@
 						<div class="col-md-3">
 							<div class="left border  bg-white shadow">
 								<div class="resume-display d-flex justify-content-center p-3">
-									<img src="images/resume-template/experienced.png" alt="">
+									<div class="final-resume-preview bg-white  text-dark">
+										<div class="resume-content ">
+											<div class="top py-2 py-md-4">
+												<div class="row no-gutters">
+													<div class="col-3 px-2 px-md-4">
+														<div
+															class="resume-pic  d-flex align-items-center justify-content-center">
+															<span class="font-weight-bold">JK</span>
+														</div>
+													</div>
+													<div class="col-9 px-2 px-md-4">
+														<div class="resume-user-name">
+															<h1 class="text-uppercase mb-0">JACQUILINE KHALFAN
+															</h1>
+															<span class="d-inline-block"
+																style="height: 5px;background-color: #03a9f4; width: 100px;"></span>
+														</div>
+														<ul
+															class="resume-user-quick-info d-flex list-unstyled d-flex align-items-center mt-3">
+															<li class="mr-2 mr-md-3 text-nowrap"><span
+																	class="span text-primary mr-1 mr-md-2 fa fa-map-marker"></span>
+																Dar es Salaam, Tanzania </li>
+															<li class="mr-2 mr-md-3 text-nowrap"><span
+																	class="span text-primary mr-1 mr-md-2 fa fa-phone"></span>05897136413
+															</li>
+															<li class="mr-2 mr-md-3 text-nowrap"><span
+																	class="span text-primary mr-1 mr-md-2 fa fa-envelope"></span>jacquiline.khalfan@dproz.ac.tz
+															</li>
+														</ul>
+													</div>
+												</div>
+											</div>
+											<div class="bottom">
+												<div class="row no-gutters">
+													<div class="col-4 border-right px-2 px-md-4"
+														style="background-color: #f8f9fa;">
+														<div class="contact-info my-4">
+															<h3 class="text-uppercase">CONTACT</h3>
+															<ul class="list-unstyled">
+																<li>Dar es Salaam, Tanzania </li>
+																<li><span class="font-weight-bold">Mobile:</span>
+																	9999999999
+																</li>
+																<li><span class="font-weight-bold">Email</span>
+																	test@email.com
+																</li>
+															</ul>
+														</div>
+														<div class="personal-links my-4">
+															<h3 class="text-uppercase">website, portfolio, profiles
+															</h3>
+															<ul class="pl-3">
+																<li>Dar es Salaam, Tanzania </li>
+																<li><span class="font-weight-bold">Mobile:</span>
+																	9999999999
+																</li>
+																<li><span class="font-weight-bold">Email</span>
+																	test@email.com
+																</li>
+															</ul>
+														</div>
+														<div class="education-info my-4">
+															<h3 class="text-uppercase">Education</h3>
+															<ul class="pl-3">
+																<li>January, 2020</li>
+																<li>Bachelor of Science: Computer Applications</li>
+																<li><span class="font-weight-bold">Central
+																		School</span>Dar es
+																	Salaam
+																</li>
+															</ul>
+														</div>
+														<div class="certifications-info my-4">
+															<h3 class="text-uppercase">Certifications</h3>
+															<ul class="pl-3">
+																<li>Certified Associate Webmaster</li>
+																<li>MCPD - Microsoft Certified Professional
+																	Developer</li>
+
+															</ul>
+														</div>
+														<div class="languages-info my-4">
+															<h3 class="text-uppercase">Languages</h3>
+															<ul class="list-unstyled">
+																<li>Dar es Salaam, Tanzania </li>
+																<li><span class="font-weight-bold">Mobile:</span>
+																	9999999999
+																</li>
+																<li><span class="font-weight-bold">Email</span>
+																	test@email.com
+																</li>
+															</ul>
+														</div>
+													</div>
+													<div class="col-8 px-2 px-md-4">
+														<div class="professional-summary-info mt-2 mb-4">
+															<h3 class="text-uppercase with-circle">Professional
+																Summary</h3>
+															<p>Tech-savvy Web Developer contributes specialty in
+																search engine
+																optimization, marketing, social media management and
+																audio/video
+																integration to launch custom-tailored code for
+																website presence.
+																Detailed understanding of complex, up-to-date
+																programming
+																languages
+																and considerations. Innovative approach to
+																actualizing
+																organizational marketing plans. Resourceful
+																navigation of
+																intricate
+																factors governing web planning, security, SEO and
+																launch.</p>
+														</div>
+														<div class="languages-info my-4">
+															<h3 class="text-uppercase  with-circle">Accomplishments
+															</h3>
+															<ul class="pl-3">
+																<li>Spearheaded a large-scale client project as a
+																	result of
+																	skill
+																	set and education and completed the project two
+																	weeks ahead
+																	of
+																	schedule.</li>
+																<li>Assisted the senior developer regularly with
+																	various tasks,
+																	which resulted in learning additional scripting
+																	languages.
+																</li>
+																<li>Used Microsoft Excel to develop inventory
+																	tracking
+																	spreadsheets.
+																</li>
+																<li>Resolved product issue through consumer testing.
+																</li>
+																<li>Provided extensive technical support to the
+																	customer which
+																	boosted company profit margins by 90%.</li>
+															</ul>
+														</div>
+														<div class="skills-info my-4">
+															<h3 class="text-uppercase  with-circle">Skills</h3>
+															<ul class="pl-3">
+																<li>Version Control Systems: Git, Github</li>
+																<li>Complex Problem Solving</li>
+																<li>Communication and Interpersonal Skills</li>
+																<li>Analytical Thinking</li>
+																<li>Javascript Libraries and Frameworks</li>
+																<li>Web Analytics Tools</li>
+																<li>Time Management and Prioritization</li>
+																<li>Scripting Languages: PHP, Python, Javascript
+																</li>
+																<li>Responsive Web Design</li>
+															</ul>
+														</div>
+														<div class="work-history-info my-4">
+															<h3 class="text-uppercase  with-circle">Work History
+															</h3>
+															<p class="mb-0">August, 2019 - May, 2021</p>
+															<p class="mb-2"><strong>Web Developer</strong>,
+																<em>Kellton
+																	Tech</em>,
+																Dar es Salaam, Tanzania </p>
+															<ul class="pl-3">
+																<li>Planned website development, converting mockups
+																	into usable
+																	web
+																	presence with HTML, JavaScript, AJAX and JSON
+																	coding.</li>
+																<li>Provided front-end website development using
+																	WordPress,
+																	Hubspot
+																	and other editing software.</li>
+																<li>Conducted functional testing over course of web
+																	development
+																	lifecycle.
+																</li>
+																<li>Pulled from PHP, SQL, JavaScript and other
+																	back-end library
+																	knowledge to bolster programming resources.
+																</li>
+																<li>Consulted with marketing department to ascertain
+																	organizational
+																	requirements, then compile, refine and generate
+																	webpage
+																	roadmap
+																	to achieve objectives.</li>
+															</ul>
+														</div>
+														<div class="affliations-info my-4">
+															<h3 class="text-uppercase with-circle">Affiliations</h3>
+															<ul class="pl-3">
+																<li> Association for Computing Machinery</li>
+																<li>Freemason</li>
+																<li>Toastmasters</li>
+																<li>Society of Human Resource Management</li>
+																<li>APICS – Association for Supply Chain Management
+																</li>
+																<li>Jaycees</li>
+																<li>Association of Information Technology
+																	Professionals</li>
+															</ul>
+														</div>
+														<div class="addtional-info my-4">
+															<h3 class="text-uppercase with-circle">Additonal
+																Information</h3>
+															<p>Lorem Ipsum is simply dummy text of the printing and
+																typesetting
+																industry. Lorem Ipsum has been the industry's
+																standard dummy
+																text
+																ever since the 1500s, when an unknown printer took a
+																galley of
+																type
+																and scrambled it to make a type specimen book. It
+																has survived
+																not
+																only five centuries, but also the leap into
+																electronic
+																typesetting,
+																remaining essentially unchanged. It was popularised
+																in the 1960s
+																with the release of Letraset sheets containing Lorem
+																Ipsum
+																passages,
+																and more recently with desktop publishing software
+																like Aldus
+																PageMaker including versions of Lorem Ipsum.</p>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
 								</div>
 								<div
 									class="resume-meta p-3 d-flex align-items-center justify-content-between border-bottom border-top">
