--- a/dashboard-known-job.html
+++ b/dashboard-known-job.html
@@ -145,7 +145,7 @@
 								<span class="font-weight-bold mr-2">Resume: </span>
 
 								<div class="dropdown">
-									<span type="button" id="SelectResume" data-toggle="dropdown" aria-haspopup="true"
+									<span id="SelectResume" data-toggle="dropdown" aria-haspopup="true"
 										aria-expanded="false">
 										JacquilineKhalfanResume <span class="fa fa-angle-down ml-1"></span>
 									</span>
